--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
+
+
+.title {
+  padding-top: 10px;
+  background-color: #39424e;
+  color: white;
+  display:flex;
+  justify-content: center;
+
+}
+
+.content {
+  padding-top: 100px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.cards {
+  margin-top: 70px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  
+
+}
+.card {
+  border: 5px solid blueviolet !important;
+  border-style: double !important;
+  border-radius: 20px;
+  width: max-content !important;
 }
 
-.App-link {
-  color: #61dafb;
+.card h2 {
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+}
+button {
+  margin-top: 10px !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.list {
+  display: flex;
+  justify-content: space-around;
 }
